stage icon border and alignment fixed

--- a/src/css/formulae.scss
+++ b/src/css/formulae.scss
@@ -256,6 +256,7 @@ $color-suffix: 00;
     justify-content: center;
     align-items: center;
     margin-right: 16px;
+    border-radius: 4px;
 }
 
 .lh-1-54 {
