--- a/src/css/workflow.css
+++ b/src/css/workflow.css
@@ -182,7 +182,6 @@
     width: 24px;
     height: 24px;
     background-size: 100% 100%;
-    margin: 0 0 0 8px;
 }
 
 .workflow-node__add-cd-btn {
